--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: "LinuxWire"
-background: "/_assets/cappyblappy.jpg"
+background: "_assets/images/qcbackground.jpg"
 ---
 
 <p>Welcome to <strong>LinuxWire</strong> — notes on Linux, open source, and development.  
