--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 ---
 layout: home
-title: "LinuxWire"
+title: "Home"
 background: "assets/qcbackground.jpg"
 ---
-
-<p>Welcome to <strong>LinuxWire</strong> — notes on Linux, open source, and development.  
-Browse the latest posts below.</p>
