--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -1,8 +1,8 @@
 ---
-layout: home
+layout: single
 permalink: "/posts/"
 title: "Posts"
-background: "assets/qcbackground.jpg"
+background: "../assets/qcbackground.jpg"
 ---
 
 <ul>
