--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,18 +6,51 @@ description: "Get in touch"
 background: "../assets/qcbackground.jpg"
 ---
 <p>Want to get in touch? Fill out the form below and I will get back to you as soon as possible!</p>
-<form
-  action="https://formspree.io/f/mqagypew"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
+<form id="contactForm" action="https://formspree.io/f/mqagypew" method="POST" novalidate>
+  <!-- Honeypot (spam trap) -->
+  <input type="text" name="_gotcha" style="display:none">
+
+  <div class="control-group">
+    <div class="form-group floating-label-form-group controls">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" placeholder="Name" id="name" name="name" required>
+      <p class="help-block text-danger"></p>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="form-group floating-label-form-group controls">
+      <label for="email">Email Address</label>
+      <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required>
+      <p class="help-block text-danger"></p>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="form-group col-xs-12 floating-label-form-group controls">
+      <label for="phone">Phone Number</label>
+      <input type="tel" class="form-control" placeholder="Phone Number" id="phone" name="phone">
+      <p class="help-block text-danger"></p>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="form-group floating-label-form-group controls">
+      <label for="message">Message</label>
+      <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required></textarea>
+      <p class="help-block text-danger"></p>
+    </div>
+  </div>
+
+  <!-- Optional: subject/redirect -->
+  <input type="hidden" name="_subject" value="New message from LinuxWire Blog">
+  <!-- If you prefer redirect after success, set _next to a thank-you page and skip the JS below -->
+  <!-- <input type="hidden" name="_next" value="https://linuxwire.net/thanks/"> -->
+
+  <br>
+  <div id="success" aria-live="polite"></div>
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+  </div>
 </form>
