--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,7 @@ layout: page
 title: "About"
 permalink: "/about/"
 description: "About LinuxWire"
+background: "../assets/qcbackground.jpg"
 ---
 
 <p>Hello world! My name is Celestia and I am a 19 year-old mathematics and theoretical computer science student in Florida, also known as Hadestown... Despite having a two-year college background in liberal-arts education, when I was 18 and first entered university post-highschool, I found a love for math that I never expected to have.</p>
