--- a/pages/about.html
+++ b/pages/about.html
@@ -6,10 +6,17 @@ description: "About LinuxWire"
 background: "../assets/qcbackground.jpg"
 ---
 
-<p>Hello world! My name is Celestia and I am a 19 year-old mathematics and theoretical computer science student in Florida, also known as Hadestown... Despite having a two-year college background in liberal-arts education, when I was 18 and first entered university post-highschool, I found a love for math that I never expected to have.</p>
+<p>Hello world! My name is Celestia, and I am a 20-year-old interdisciplinary mathematical sciences major with specific emphases in computational mathematics and computer science. I am currently studying in Florida. I started my academic career in college, obtaining a degree in liberal arts. Despite this, I quickly found a love for mathematics in university, which has since grown into a much larger interest in logic and computability theory.</p>
 
 <p>
-I have strong interests in fields from electrical engineering, to history, to mathematics (of course), and programming. I hope I can use this blog as an outlet for all of my (admittedly) hyperfixations as well as document my experience of being a queer student in a place that is overall relativly hostile to my existence. </p>
+I intend to use this blog to discuss my personal interests in mathematics, share my thoughts on specific topics and research interests, and reflect on my progress up the academic ladder as a whole. I also wish to share my experiences as a queer person, both in academia and in my state. The specific research interests I enjoy talking about the most are:
+</p>
 
-<p>I am currently active in research in both mathematics and in interdisciplinary engineering fields, and I frequently attend conferences and give talks. Maybe I will get to see you at one. 
+    <ul>
+      <li><b>Theoretical Computer Science:</b> This is probably my most recent major research interest. Particularly, I am interested in alternative models of computation, the limits of computation on Turing machines, and the computability of functions.</li>
+      <li><b>Analysis:</b> I have a large interest in analysis, both in the pure sense of real analysis, complex variables, and measures, but also on the applied side with optimization. Their direct applications into computing, such as quantum computers, I also take great interest in.</li>
+      <li><b>Engineering:</b>I also find great interest in finding new ways to apply these mathematical concepts to solve real-world problems. This lies in the realm of algorithm design, as well as in computer and electrical engineering.problems</li>
+    </ul>
+
+<p>I frequently attend conferences and give talks on the above topics as well. This is a way for documenting things I would love to discuss with them in a freely accessible, laid-back manner. Maybe I will get to see you at a conference! There are a few things I love more than sharing my knowledge with others and learning from others.  
 </p>
